# jotun

./: .gitignore  .mutants.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  deny.toml  justfile
.cargo/: config.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docs.yml  osv-scanner.yml  publish.yml  security.yml
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/engine/: custom-host.md  events-and-actions.md  overview.md
book/src/getting-started/: installation.md  state-machine.md  three-node-cluster.md
book/src/reference/: crates.md  design.md
book/src/runtime/: bootstrap.md  config.md  leadership-transfer.md  node.md  observability.md  read-index.md  snapshots.md
book/src/sim/: invariants.md  overview.md
jotun/: Cargo.toml
jotun-core/: Cargo.toml
jotun-core/src/: lib.rs
jotun-core/src/engine/: action.rs  engine.rs  env.rs  event.rs  log.rs  metrics.rs  mod.rs  (+3 more)
jotun-examples/: Cargo.toml  run-three-node.sh
jotun-sim/: Cargo.toml
jotun-sim/src/: cluster.rs  env.rs  harness.rs  invariants.rs  lib.rs  network.rs  schedule.rs
jotun/src/: lib.rs  node.rs  state_machine.rs
jotun/tests/: disk_storage.rs  node.rs  node_surface.rs  nonblocking_snapshot.rs  runtime_chaos.rs  tcp_transport.rs  traits.rs
yggr/: Cargo.toml
yggr-core/src/: lib.rs
yggr-examples/: Cargo.toml
yggr/src/: lib.rs  node.rs  state_machine.rs
yggr/tests/: disk_storage.rs  multi_node.rs  node.rs  node_surface.rs  nonblocking_snapshot.rs  runtime_chaos.rs  traits.rs
(+53 files in other folders)
